# chess-ws-api

./: .gitignore  Cargo.toml  TODO.md
archive/: chess.js  chess_bg.wasm  choose_game.html  game.html  game.js  local_game.html  lost.html  websocket.js  won.html
frontend/: constants.ts  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json
frontend/public/: chess.d.ts  chess.js  chess_bg.wasm
frontend/src/: App.css  App.tsx  Board.tsx  GameWrapper.tsx  Home.tsx  Join.tsx  Local.tsx  LocalGame.tsx  OnlineGame.tsx  StartLocal.tsx  StartOnline.tsx  index.css  main.tsx
frontend/wasm/: Cargo.toml  build-install.sh
frontend/wasm/src/: lib.rs
src/: main.rs
static/: chess.js  chess_bg.wasm  game.html  game.js  index.html  init.html  join_game.html  local_game.html  main.js  start_game.html  userInterface.js  waiting_for_opponent.html  websocket.js  ws.html
