[package]
name = "chess-ws-api"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = { version = "0.7.3", features = ["ws"] }
chrono = { version = "0.4.26", features = ["serde"] }
colored = "2.1.0"
futures = "0.3.28"
reqwest = "0.12.5"
serde = { version = "1.0.163", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.96"
shuttle-axum = "0.48.0"
shuttle-runtime = { version = "0.48.0", default-features = false }
tokio = "1.28.2"
tower-http = { version = "0.5.0", features = ["fs", "cors"] }
wasm-bindgen = "0.2.93"
