[package]
name = "chess"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
serde = "1.0.207"
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.128"
wasm-bindgen = "0.2.93"
